--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,4 +1,3 @@
-
   <h2>Top Questions</h2>
 
   <table>
@@ -6,11 +5,11 @@
       <tr>
         <td class="small-data">
           <% if current_user %>
-            <%= link_to questions_upvote_path(@question) do %>
+            <%= link_to questions_upvote_path(question), method: :put do %>
               <div class="arrow-up"></div>
             <% end %>
-            <%= @question.votes.count %>
-            <%= link_to questions_downvote_path(@question) do %>
+            <%= question.votes.count %>
+            <%= link_to questions_downvote_path(question), method: :put do %>
               <div class="arrow-down"></div>
             <% end %>
           <% else %>
@@ -26,7 +25,7 @@
         <td class="small-data"><%= question.answers.count %>
           <br>Answers</td>
 
-        <td id="question-data"><h4><%= link_to question.title, question_path(question) %></h4>
+        <td class="question-data"><h4><%= link_to question.title, question_path(question) %></h4>
         asked by <%= link_to question.user.name, profile_path(question.user.slug) %> at <%= question.created_at %></td>
 
       </tr>
