--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,7 +1,7 @@
  <div id="new-answer">
   <%= form_for [@question, @answer] do |f| %>
     <%= f.label :answer %>:
-    <%= f.text_field :content %>
+    <%= f.text_area :content, :size => "50X10" %>
 
     <%= f.submit %>
   <% end %>
