--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,11 @@
 
 	    <div>
 				<hr></hr>
+				<div class="col-mid-2">
+					<% if current_user == @user %>
+						<%= button_to 'Edit My Profile', root_path, class: "btn btn-primary btn-sm", method: :get %>
+					<% end %>
+				</div>
 				<div class="col-md-6">
 					<h3><%= @user.questions.count %> Questions</h3>
 					<hr></hr>
