--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
       <%= f.text_field :name%><br>
 
       <%= f.label :avatar_url%>
-      <%= f.text_field%>
+      <%= f.text_field :avatar_url%>
 
       <%= f.label :bio%>:<br>
       <%= f.text_area :bio, sixe: "50x10"%>
