--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
           <li><%= button_to 'Signup', new_user_registration_path, class: "btn btn-primary btn-sm", method: :get %></li>
           <li><%= button_to 'Signin', new_user_session_path, class: "btn btn-primary btn-sm", method: :get %></li>
           <% else %>
+          <li><%= button_to 'New Question', new_question_path, class: "btn btn-primary btn-sm",method: :get %></li>
           <li><%= button_to 'My Profile', profile_path(current_user.id), class: "btn btn-primary btn-sm",method: :get %></li>
           <li><%= button_to 'Logout', destroy_user_session_path, class: "btn btn-primary btn-sm", method: :delete %></li>
           <% end %>
