show votes when user is not logged in

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -15,6 +15,7 @@
             <%= link_to new_user_session_path do %>
               <div class="arrow-up"></div>
             <% end %></br>
+            <%= question.votes.count %>
             <%= link_to new_user_session_path do %>
               <div class="arrow-down"></div>
             <% end %>
