--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -14,7 +14,7 @@
           <% else %>
             <%= link_to new_user_session_path do %>
               <div class="arrow-up"></div>
-            <% end %></br>
+            <% end %>
             <%= question.votes.count %>
             <%= link_to new_user_session_path do %>
               <div class="arrow-down"></div>
