--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -67,7 +67,8 @@
         <% else %>
           <%= link_to new_user_session_path do %>
             <div class="arrow-up"></div>
-          <% end %></br>
+          <% end %>
+          <%= answer.votes.count %>
           <%= link_to new_user_session_path do %>
             <div class="arrow-down"></div>
           <% end %>
