added kaminari to paginate views, removed questions/index page and redirected to root direction in question/index

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -25,9 +25,12 @@
         <td class="small-data"><%= question.answers.count %>
           <br>Answers</td>
 
-        <td class="question-data"><h4><%= link_to question.title, question_path(question) %></h4>
-        asked by <%= link_to question.user.name, user_path(question.user.slug) %> at <%= question.created_at %></td>
-
+        <td class="question-data">
+          <h4><%= link_to question.title, question_path(question) %></h4>
+          asked by <%= link_to question.user.name, user_path(question.user.slug) %> at <%= question.created_at %>
+        </td>
       </tr>
     <% end %>
   </table>
+
+<%= paginate @questions %>
