--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -3,23 +3,7 @@
     <% @questions.each do |question| %>
       <tr>
         <td class="small-data">
-          <% if current_user %>
-            <%= link_to questions_upvote_path(question), method: :put do %>
-              <div class="arrow-up"></div>
-            <% end %>
-            <%= question.votes.count %>
-            <%= link_to questions_downvote_path(question), method: :put do %>
-              <div class="arrow-down"></div>
-            <% end %>
-          <% else %>
-            <%= link_to new_user_session_path do %>
-              <div class="arrow-up"></div>
-            <% end %>
-            <%= question.votes.count %>
-            <%= link_to new_user_session_path do %>
-              <div class="arrow-down"></div>
-            <% end %>
-          <% end %>
+          <%= render partial: "/questions/question_votes", locals: { question: question } %>
         </td>
 
         <td class="small-data"><%= question.answers.count %>
