paired with Lauren on adding AJAX to add answer to questions show page. currently working on AJAX for votes

--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,6 +1,6 @@
- <div id="new-answer">
-<br>
-  <%= form_for [@question, @answer] do |f| %>
+<div id="new-answer">
+  <br>
+  <%= form_for [@question, @answer], remote: true do |f| %>
     <p><%= f.label :answer %>:</p>
     <p><%= f.text_area :content, :size => "50X10" %></p>
 
