--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -29,7 +29,6 @@
         <% end %>
       </div>
     </div>
-
   </div>
 </div>
 
@@ -37,30 +36,8 @@
 <hr></hr>
 
   <table id="answers-display-table">
-    <% @question.answers.each do |answer| %>
-    <tr>
-      <td class="small-data">
-        <%= render partial: "/answers/answer_votes", locals: { question: @question, answer: answer } %>
-      </td>
-
-      <td class="question-data">
-        <br><p><%= markdown(answer.content) %> - <%= link_to answer.user.name, user_path(answer.user.slug) %></p>
-          <% if current_user == answer.user %>
-        <p><%= link_to 'Edit Answer', edit_question_answer_path(@question.id, answer.id) %></p>
-        <% end %>
-
-          <hr></hr>
-          <% if current_user %>
-            <div class="comments-display-div">
-              <%= render partial: "comments_view", locals: { object: answer } %>
-              <%= link_to 'Add Comment', question_answer_comments_path(@question, answer) %>
-          <% end %>
-          </div>
-
-      </td>
-
-    </tr>
-
+    <% @question.answers.reverse.each do |answer| %>
+      <%= render partial: "/answers/answer", locals: { question: @question, answer: answer } %>
     <% end %>
   </table>
 
