--- a/app/views/questions/_question_votes.html.erb
+++ b/app/views/questions/_question_votes.html.erb
@@ -1,8 +1,8 @@
 <% if current_user %>
-  <%= link_to questions_upvote_path(question), method: :put do %>
+  <%= link_to questions_upvote_path(question), class: "question-upvote", method: :put do %>
     <div class="arrow-up"></div>
   <% end %>
-  <%= question.votes.count %>
+  <span class="question-vote"><%= question.votes.count %></span>
   <%= link_to questions_downvote_path(question), method: :put do %>
     <div class="arrow-down"></div>
   <% end %>
