currently working on AJAXing ask question button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
           <li><%= button_to 'Signin', new_user_session_path, class: "btn btn-primary btn-sm", method: :get %></li>
           <% else %>
           <li><%= button_to 'My Profile', user_path(current_user.slug), class: "btn btn-primary btn-sm",method: :get %></li>
-          <li><%= button_to 'Ask A Question', new_question_path, class: "btn btn-primary btn-sm",method: :get %></li>
+          <li><%= button_to 'Ask A Question', new_question_path, class: "btn btn-primary btn-sm" id="ask-question", method: :get %></li>
           <li><%= button_to 'Logout', destroy_user_session_path, class: "btn btn-primary btn-sm", method: :delete %></li>
           <% end %>
         </ul>
